--- a/config/application.yml
+++ b/config/application.yml
@@ -1,5 +1,6 @@
 defaults: &defaults
   cuenta_url: <%= ENV['CADENA_CUENTA_URL'] %>
+  caja_url: <%= ENV['CADENA_CAJA_URL'] %>
 
 development:
   <<: *defaults
