グループ画像 暫定対応
* Imagenが出来次第 対応する

--- a/config/application.yml
+++ b/config/application.yml
@@ -1,6 +1,7 @@
 defaults: &defaults
   cuenta_url: <%= ENV['CUENTA_URL'] %>
   caja_url: <%= ENV['CAJA_URL'] %>
+  static_url: <%= ENV['STATIC_URL'] %>
 
 development:
   <<: *defaults
