--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,7 @@ services:
       CADENA_SECRET_KEY_BASE: x
       CUENTA_URL: http://cuenta-application:4000/
       CAJA_URL: http://caja-application:9000/
+      IMAGEN_URL: http://imagen-application:8000/
       STATIC_URL: http://localhost
       RAILS_ENV: development
     volumes:
@@ -30,7 +31,8 @@ services:
     networks:
       - cadena
       - cadena-cuenta
-      - cadena-caja
+      - cadena-imagen
+      - caja-cadena
 
 volumes:
   cadena:
@@ -42,6 +44,9 @@ networks:
   cadena-cuenta:
     external:
       name: neeco_cadena-cuenta
-  cadena-caja:
+  cadena-imagen:
     external:
-      name: neeco_cadena-caja
+      name: neeco_cadena-imagen
+  caja-cadena:
+    external:
+      name: neeco_caja-cadena
