--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       CUENTA_URL: http://cuenta-application:4000/
       CAJA_URL: http://caja-application:9000/
       IMAGEN_URL: http://imagen-application:8000/
-      STATIC_URL: http://localhost
+      STATIC_IMAGE_URL: http://localhost/images/
       RAILS_ENV: development
     volumes:
       - .:/app
