neo4jrb 8系からserver_dbはサポート外になった (httpを使う)

--- a/config/neo4j.yml
+++ b/config/neo4j.yml
@@ -1,5 +1,5 @@
 default: &default
-  type: server_db
+  type: http
   url: <%= ENV['CADENA_DATABASE_URL'] || 'http://neo4j:neo4j@localhost:7687' %>
 
 test:
